--- a/statics/css/style.css
+++ b/statics/css/style.css
@@ -1,5 +1,5 @@
 body{
-    front-family: 'Source Sans Pro', sans-serif;
+    font-family: 'Source Sans Pro', sans-serif;
     font-size: 18px;
 }
 
@@ -7,41 +7,38 @@ header{
     border-bottom: 1px solid #999;
     margin-bottom: 2rem;
     display: flex;
-
 }
 
-header h1 a{
+header  h1 a{
     color:red;
     text-decoration: none;
 }
 
 .nav-left{
-    margin-rigth: auto;
+    margin-right: auto;
 }
 
-.nav-rigth{
-    display: flex;
-    padding-top: 2rem;
+.nav-right {
+      display: flex;
+      padding-top: 2rem;
 }
 
 .post-entry {
-    margin-bottom: 2rem;
+  margin-bottom: 2rem;
 }
 
-.post-entry h2{
-    margin: 0.5rem 0;
-}
+ .post-entry h2 {
+   margin: 0.5rem 0;
+ }
 
 .post-entry h2 a, .post-entry h2 a:visited {
-    color: blue;
-    text-decoration: nome;
+  color: blue;
+  text-decoration: none;
 }
-
-.post-entry p{
-    margin: 0;
-    font-weigth: 400;
+.post-entry p {
+   margin: 0;
+   font-weight: 400;
 }
-
-.ṕost-entry h2 a:hover{
-    color:red;
+.post-entry h2 a:hover {
+   color:red;
 }
