--- a/templates/base.html
+++ b/templates/base.html
@@ -9,7 +9,12 @@
 </head>
 <body>
     <header>
-        <h1><a href="#"> Blog - Home </a></h1>
+        <div class="nav-left">
+            <h1><a href="/"> Blog da Sandy - Home </a></h1>
+        </div>
+        <div class="nav-right">
+            <h3> <a href="{% url 'post_new' %}"> Novo conteúdo no Blog </a></h3>
+        </div>
     </header>
     <div class="container">
         {% block content %} {% endblock content %}
