--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -1,11 +1,17 @@
 {% extends 'base.html' %}
-{% block title %} HOME {% endblock title %}
+{% block title %} Blog - Detalhe {% endblock title %}
 {% block content %}
-
-   <div class="post-entry">
-        <h2>{{ object.title }} </h2>
-        <p>{{ object.conteudo }}</p>
-
-    </div>
-   <a href="{{ object.get_absolute_url_update }}"> Editar postagem</a>
+        {% if messages %}
+        <ul class="messages">
+            {% for message in messages %}
+            <li{% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</li>
+            {% endfor %}
+        </ul>
+        {% endif %}
+        <div class="post-entry">
+            <h2>{{ object.title }}</h2>
+            <p>{{ object.conteudo }} </p>
+        </div>
+        <a href="{{ object.get_absolute_url_update }}">+ Editar Postagem do Blog </a><br>
+        <a href="{% url 'post_delete' object.pk %}"> Deletar Postagem do Blog </a>
 {% endblock content %}
