--- a/templates/base.html
+++ b/templates/base.html
@@ -10,13 +10,20 @@
 <body>
     <header>
         <div class="nav-left">
-            <h1><a href="/"> Blog da Sandy - Home </a></h1>
+            <h1><a href="/">Blog - Home</a></h1>
         </div>
         <div class="nav-right">
-            <h3> <a href="{% url 'post_new' %}"> Novo conteúdo no Blog </a></h3>
+            <h3><a href="{% url 'post_new' %}">+ Nova Postagem no Blog</a></h3>
         </div>
     </header>
     <div class="container">
+        {% if messages %}
+            <ul class="messages">
+                {% for message in messages %}
+                <li{% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</li>
+                {% endfor %}
+            </ul>
+        {% endif %}
         {% block content %} {% endblock content %}
     </div>
 
